--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
             <h2 class="m-0 mb-2 mt-4">
                 <a href="./" class="text-decoration-none">
                     
-                        Endarlani
+                        Vivien Endarlani
                     
                 </a>
             </h2>
