--- a/public/index.html
+++ b/public/index.html
@@ -65,13 +65,13 @@
             <ul id="nav-social" class="list-inline">
                 
                     <li class="list-inline-item mr-3">
-                        <a href="http://github.com/youruser" target="_blank">
+                        <a href="https://github.com/NoPlasticWaste" target="_blank">
                             <i class="fab fa-github fa-1x text-muted"></i>
                         </a>
                     </li>
                 
                     <li class="list-inline-item mr-3">
-                        <a href="" target="_blank">
+                        <a href="https://www.linkedin.com/in/endarlani/" target="_blank">
                             <i class="fab fa-linkedin-in fa-1x text-muted"></i>
                         </a>
                     </li>
